2007-02-04  Marius Vollmer  <mvo@zagadka.de>

	* src/apt-worker.cc (mark_related): Don't recurse over
	dependencies.
	(mark_for_install): Do auto-installation of dependencies
	explicitly here, in order to control the algorithm better.  Call
	mark_related while recursing.
	
2007-02-03  Marius Vollmer  <mvo@zagadka.de>

	* src/util.h, src/util.cc (package_info_callback): Removed state,
	cont and data parameters.  The package list widget shouldn't need
	to care about those.  Changed all callers of the callbacks.

	* src/main.cc (install_operation_callback,
	uninstall_operation_callback): New, for use with
	set_operation_callback instead of install_package and
	uninstall_package, which are now incompatible with
	set_operation_callback.  Changed all uses.
	(available_package_selected, installed_package_selected): Changed
	parameters so that they are suitable as package_info_callbacks.
	(available_package_activated, installed_package_activated): New,
	to be used with package list widget instead of install_package and
	uninstall_package, which are now incompatible.
	
2007-02-02  Jose Dapena Paz  <jdapena@igalia.com>

	Added preliminar support for integration with backup system:

	* src/apt-worker.cc: added command 
	cmd_save_applications_install_file () used to save a Single-click
	install formated file with the list of currently installed
	packages and active repositories. This file can be used to restore
	the packages using the single-click API.

	* src/instr.cc: added install types support. Now, depending on the
	type of single-click install file name it runs the standard
	dialog for installing one package, or it runs the packages selection
	dialog of backup restore dialogs.

	* src/instr.cc: added function for saving the applications.install 
	file.

	* src/main.cc, src/main.h: added support for install types in install 
	packages dialogs. New specific support for restoring backups.

	* hildon-application-manager.conf: added applications.install file to